--- a/page-don.css
+++ b/page-don.css
@@ -123,6 +123,7 @@ footer {
 .don{
   text-align: center;
   font-size:18px ;
+  font-weight: 200;
 }
 .formul{
   margin: 20px;
@@ -160,6 +161,8 @@ select{
 .texteimg{
   color: white;
   text-align: center;
+  font-size: 18px;
+  font-weight: 200;
 }
 .btn{
  display: flex;
