--- a/style.css
+++ b/style.css
@@ -408,31 +408,34 @@ body{
        }
         <!-- DEMANDE DE DON -- >
         .don-section{
-          background-image: url('images/aide.jpg');
-          position: relative;
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          max-width:100%;
-          padding: 40px 20px;
-          text-align: center;
-          min-height: 400px;
+         height: 400px;
+         overflow: hidden;
+         position: relative;
+        }
+        .don-background{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          filter: brightness(0.7);
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 1;
         }
         .don-overlay{
-           background-color: rgba(255, 255, 255,0.3);
-           margin: auto;
-           border: 4px solid #007a33;
-           border-radius: 70px;
-           max-width: 800px;
-           padding: 40px;
-           margin-top: 150px;
-           color: #00561b;
-           text-align: center;
-           justify-content: center;
-           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          position: relative;
+          z-index: 2;
+          background-color: rgba(255, 255, 255, 0.5);
+          padding: 30px;
+          border-radius: 60px;
+          border: 3px solid #00561b;
+          max-width: 700px;
+          margin: 0 auto;
+          margin-top: 50px;
+        
         }
         .don-overlay h3{
-          font-size: 24px;
+          font-size: 35px;
           font-weight: bold;
           margin-bottom: 20px;
         }
@@ -442,6 +445,7 @@ body{
           margin-bottom: 30px;
           color: #555;
           width: 600%;
+          max-width: 700px;
           margin-left: auto;
           margin-right: auto;
         }
@@ -473,7 +477,7 @@ body{
         font-weight: bold;
         margin-bottom: 30px;
         text-align: center;
-        margin-top: 630px;
+        margin-top: 450px;
        }
        .merci-text{
         font-size: 18px;
