--- a/style.css
+++ b/style.css
@@ -416,17 +416,19 @@ body{
          align-items: center;
          justify-content: center;
          overflow: hidden;
+         margin-bottom: 20px;
 
         }
         .don-background{
           position: absolute;
           top: 4830px;
           left: 0;
-          width: 100%;
-          height: 900px;
+         
           object-fit: cover;
           filter: brightness(0.7);
           z-index: 1;
+           width: 2000px;
+           height: 900px;
         }
         .don-overlay{
           position: relative;
@@ -476,25 +478,26 @@ body{
        <!-- REMERCIEMENT -- >
        .merci-section{
         width: 100%;
-        padding: 40px 20px;
+        padding: 20px 20px;
+        margin-top: -20px;
         background-color: #ffffd7;
         text-align: center;
        }
        .merci-title{
         color: #ff7700;
-        font-size: 24px;
-        font-weight: bold;
+        font-size: 35px;
+        font-weight: 900;
         margin-bottom: 30px;
         text-align: center;
         margin-top: 450px;
        }
        .merci-text{
-        font-size: 18px;
+        font-size: 30px;
         color: #333;
         max-width: 900px;
         margin: 0 auto ;
         line-height: 1.8;
-        padding: 0 20px;
+        padding: 0 10px;
         text-align: center;
        }
        .merci-images{
