--- a/Nosprojets.css
+++ b/Nosprojets.css
@@ -22,7 +22,7 @@ body {
   display: flex;
   align-items: center;
   list-style: none;
-  gap: 60px;
+  gap: 50px;
 }
 
 .menu {
@@ -70,6 +70,7 @@ h4 {
   text-decoration: none;
 }
 
+
 /* Cartes projets */
 .project-card {
   border-radius: 15px;
@@ -81,6 +82,61 @@ h4 {
     margin: 0 auto;     /* Centrage horizontal */
     margin-right: 0;
 }
+
+
+
+.carte{
+  text-align: center;
+  background-color: #ff7f00;
+  color: white;
+  padding: 18px 0;
+  font-weight: 600;
+  font-size: 20px;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
+body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+   
+
+    #map {
+       height: 500px;
+    width: 100%;
+    margin-bottom: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border: 2px solid #ccc;
+    z-index: 0;
+    }
+
+    #map-legend {
+    max-width: 300px;
+    background: white;
+    padding: 10px 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    font-size: 14px;
+    margin: 0 auto 2rem;
+    text-align: left;
+}
+    .leaflet-popup-content {
+      font-size: 15px;
+      line-height: 1.4;
+    }
+
+   
+    #map-legend img {
+      vertical-align: middle;
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+    }
+
+
 
 
 .project-card .card-img-top {
@@ -154,19 +210,23 @@ h4 {
 
 .section-title {
   color: #00561b;
-  font-size: 4rem;
+  font-size: 50px;
   font-weight: bold;
   font-style: italic;
   text-align: center;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  text-decoration: underline;
+  text-decoration-color: #ff7f00;
 }
 
-.title-underline,
+/*.title-underline,
 .title-underline1 {
   height: 4px;
   background-color: #ff7f00;
   margin: 0 auto 10px auto;
+  
 }
+  
 
 .title-underline {
   width: 400px;
@@ -175,11 +235,13 @@ h4 {
 .title-underline1 {
   width: 250px;
 }
-
+*/
 .intro-text {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 18px;
+  font-style: italic;
   color: #333;
+  font-weight: 200;
   margin-bottom: 40px;
   line-height: 1.6;
 }
@@ -212,6 +274,84 @@ h4 {
   font-size: 1rem;
   line-height: 1.5;
 }
+
+
+/*temoignage*/
+.titre{
+  text-align: center;
+}
+.custom-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.rim:hover {
+    transform: scale(1.02);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+.popup-content {
+    background: white;
+    padding: 30px;
+    border-radius: 10px;
+    max-width: 400px;
+    width: 90%;
+    text-align: center;
+    animation: fadeIn 0.4s ease-in-out;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+}
+
+@keyframes fadeIn {
+    from { transform: scale(0.8); opacity: 0; }
+    to { transform: scale(1); opacity: 1; }
+}
+
+.rim {
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* S'assurer que le parent prend toute la hauteur */
+.col-md-6, .col-lg-4 {
+  display: flex;
+}
+
+.card-body {
+  flex-grow: 1;
+}
+.testimonial-avatar {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.stars i {
+  color: #ff7f00; 
+  font-size: 16px;
+}
+
+/* Option : survol ou animation */
+.stars i:hover {
+  color: #00561b; /
+  
+}
+
+
 
 /* Footer */
 
